syntax = "proto3";

package com.road.yishi.proto.extrajob;

message ExtraJobItemMsg {
  int32 jobType = 1;
  int32 jobLevel = 2;
  string skillScript = 3;
}
